# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg6PaEbJ_SkpwtvvcstYdZE_TBs8hRvHnoP1RoRdYkkvk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgR5DbTZDs97TooJ7obf5bfMSyjEheTQQ0jieATLegr-g=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgS35Kv6fVheTIvBqnOaRjAVNFalXWh8vPbjW-qk5vkrw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgaiv4uGDyNWNvy8c1CB3i5_kVWWHzuVv-pONN_A27LAs=',
      'err': 0,
    }),
  ])
# ---
